--- a/Colors/Base.lproj/Main_iPhone.storyboard
+++ b/Colors/Base.lproj/Main_iPhone.storyboard
@@ -18,7 +18,7 @@
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                             </view>
-                            <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="180" minValue="0.0" maxValue="360" id="pMj-jI-17r">
+                            <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.57999999999999996" minValue="0.0" maxValue="1" id="pMj-jI-17r">
                                 <rect key="frame" x="18" y="363" width="280" height="34"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                 <connections>
@@ -32,7 +32,7 @@
                                     <action selector="sliderDidChange:" destination="vXZ-lx-hvc" eventType="valueChanged" id="j5Y-hW-11L"/>
                                 </connections>
                             </slider>
-                            <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="18.399999999999999" minValue="0.0" maxValue="100" id="Zl4-gy-vvo">
+                            <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.23000000000000001" minValue="0.0" maxValue="1" id="Zl4-gy-vvo">
                                 <rect key="frame" x="18" y="491" width="280" height="34"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                 <connections>
@@ -61,7 +61,7 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
                     <connections>
-                        <outlet property="colorSapceViewer" destination="wbq-Rb-Wpj" id="0ex-sA-zBs"/>
+                        <outlet property="colorSpaceViewer" destination="wbq-Rb-Wpj" id="NNr-ZC-3ie"/>
                         <outlet property="contrastLabel" destination="fUo-rV-T4r" id="tze-TY-fQc"/>
                         <outlet property="contrastSlider" destination="Zl4-gy-vvo" id="A4b-an-6JP"/>
                         <outlet property="hueLabel" destination="9Fw-lm-yuF" id="xPO-yb-o5W"/>
