--- a/Colors/Base.lproj/Main_iPhone.storyboard
+++ b/Colors/Base.lproj/Main_iPhone.storyboard
@@ -13,7 +13,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" id="wbq-Rb-Wpj" userLabel="Colorspace Viewer" customClass="MTZColorSpaceView">
+                            <view contentMode="scaleToFill" id="wbq-Rb-Wpj" userLabel="Key-Colorspace Viewer" customClass="MTZKeyColorSpaceView">
                                 <rect key="frame" x="58" y="80" width="200" height="200"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
@@ -25,34 +25,8 @@
                                     <action selector="sliderDidChange:" destination="vXZ-lx-hvc" eventType="valueChanged" id="8K6-sK-ACG"/>
                                 </connections>
                             </slider>
-                            <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="1" minValue="0.0" maxValue="1" id="e8r-0h-hO6">
-                                <rect key="frame" x="20" y="427" width="280" height="34"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
-                                <connections>
-                                    <action selector="sliderDidChange:" destination="vXZ-lx-hvc" eventType="valueChanged" id="j5Y-hW-11L"/>
-                                </connections>
-                            </slider>
-                            <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.184" minValue="0.0" maxValue="1" id="Zl4-gy-vvo">
-                                <rect key="frame" x="20" y="491" width="280" height="34"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
-                                <connections>
-                                    <action selector="sliderDidChange:" destination="vXZ-lx-hvc" eventType="valueChanged" id="gN0-YG-az2"/>
-                                </connections>
-                            </slider>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Hue" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="9Fw-lm-yuF">
                                 <rect key="frame" x="20" y="348" width="280" height="12"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" style="UICTFontTextStyleCaption1"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Lightness" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="7wv-hP-L6F">
-                                <rect key="frame" x="20" y="404" width="280" height="15"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" style="UICTFontTextStyleCaption1"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Contrast" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="fUo-rV-T4r">
-                                <rect key="frame" x="20" y="468" width="280" height="15"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" style="UICTFontTextStyleCaption1"/>
                                 <nil key="highlightedColor"/>
@@ -62,12 +36,8 @@
                     </view>
                     <connections>
                         <outlet property="colorSpaceViewer" destination="wbq-Rb-Wpj" id="NNr-ZC-3ie"/>
-                        <outlet property="contrastLabel" destination="fUo-rV-T4r" id="tze-TY-fQc"/>
-                        <outlet property="contrastSlider" destination="Zl4-gy-vvo" id="A4b-an-6JP"/>
                         <outlet property="hueLabel" destination="9Fw-lm-yuF" id="xPO-yb-o5W"/>
                         <outlet property="hueSlider" destination="pMj-jI-17r" id="cWc-6Q-jyf"/>
-                        <outlet property="lightnessLabel" destination="7wv-hP-L6F" id="Y3Y-wn-Iv5"/>
-                        <outlet property="lightnessSlider" destination="e8r-0h-hO6" id="1gt-EY-lWl"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
