Fixed display issues with iPad. Separated out some iPhone/iPad specific UI code.

--- a/Demo Apps/Music Player/Music/Base.lproj/Main_iPad.storyboard
+++ b/Demo Apps/Music Player/Music/Base.lproj/Main_iPad.storyboard
@@ -49,10 +49,10 @@
                                         <rect key="frame" x="64" y="300" width="896" height="44"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <fontDescription key="fontDescription" name="HelveticaNeue-Thin" family="Helvetica Neue" pointSize="36"/>
-                                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <color key="textColor" white="1" alpha="0.5" colorSpace="calibratedWhite"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" showsTouchWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eVg-ef-86N" userLabel="Rewind">
+                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eVg-ef-86N" userLabel="Rewind">
                                         <rect key="frame" x="160" y="374" width="220" height="192"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <gestureRecognizers/>
@@ -66,7 +66,7 @@
                                             <outletCollection property="gestureRecognizers" destination="pO4-PC-pAh" appends="YES" id="xto-40-kce"/>
                                         </connections>
                                     </button>
-                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" showsTouchWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jW1-o7-AOV" userLabel="Play/Pause">
+                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jW1-o7-AOV" userLabel="Play/Pause">
                                         <rect key="frame" x="402" y="374" width="220" height="192"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -81,7 +81,7 @@
                                             <action selector="playPause:" destination="w5r-tw-22r" eventType="touchUpInside" id="DOS-AU-Vbm"/>
                                         </connections>
                                     </button>
-                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" showsTouchWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XiP-uv-aj6" userLabel="FastForward">
+                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XiP-uv-aj6" userLabel="FastForward">
                                         <rect key="frame" x="644" y="374" width="220" height="192"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <gestureRecognizers/>
@@ -102,6 +102,11 @@
                                         <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <nil key="highlightedColor"/>
                                     </label>
+                                    <view opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="9tQ-mv-BQn" userLabel="Track Slider" customClass="MTZSlider">
+                                        <rect key="frame" x="353" y="606" width="320" height="6"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                    </view>
                                     <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="0:00" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Gok-zF-SLt" userLabel="Time Remaining">
                                         <rect key="frame" x="689" y="594" width="64" height="29"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -124,6 +129,7 @@
                         <outlet property="playPause" destination="jW1-o7-AOV" id="aR7-Pc-mAW"/>
                         <outlet property="timeElapsed" destination="33D-rP-WSE" id="eE8-jU-t39"/>
                         <outlet property="timeRemaining" destination="Gok-zF-SLt" id="loK-OS-PGy"/>
+                        <outlet property="trackSlider" destination="9tQ-mv-BQn" id="725-Io-W7C"/>
                         <outlet property="trackTitle" destination="Q6i-7L-26s" id="93d-dB-FaG"/>
                     </connections>
                 </viewController>
